[package]
name = "personal_site"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tower-livereload = "0.10.2"
maud = { version = "0.27.0", features = ["axum"] }
typed-builder = "0.23.2"
